syntax = "proto3";
package point.lockenomics;

option go_package = "point/x/lockenomics/types";

message DelegatedAmount {
  string index = 1; 
  string delegator = 2; 
  string validator = 3; 
  uint64 amount = 4; 
  string creator = 5;
}

